101/podinfo/generator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generator
  labels:
    app: generator
spec:
  selector:
    matchLabels:
      app: generator
  replicas: 1
  template:
    metadata:
      labels:
        app: generator
    spec:
      containers:
        - image: buoyantio/slow_cooker:1.2.0
          name: default
          command: ["/bin/sh", "-c"]
          args:
            - |-
              sed -e "s/\${SERVICE}/$SERVICE/" -e "s/\${PORT}/$PORT/" /tmp/urls | slow_cooker -qps ${QPS} -concurrency ${CONCURRENCY} @-
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
          securityContext:
            runAsUser: 1337
          volumeMounts:
            - name: cfg
              mountPath: /tmp/
      volumes:
        - name: cfg
          configMap:
            name: generator
