101/podinfo/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: podinfo
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      annotations:
      labels:
        app: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: cfg
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-conf-d
              mountPath: /etc/nginx/conf.d
            - name: nginx-tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
          securityContext:
            runAsUser: 1337
      volumes:
        - name: cfg
          configMap:
            name: frontend
        - name: nginx-conf-d
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: podinfo
spec:
  ports:
  - name: service
    port: 8080
  selector:
    app: frontend
