101/podinfo/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec:
  template:
    spec:
      replicas: 3
      containers:
        - name: podinfod
          securityContext:
            runAsUser: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
